--- a/src/PoseListComponent/PoseList.css
+++ b/src/PoseListComponent/PoseList.css
@@ -1,13 +1,28 @@
 ul {
-    width: 100%;
-    list-style-type: none;
-    display: flex;
-    flex-direction: row;
-    border: 1px solid red;
-    flex-wrap: wrap;
-  }
+  width: 100%;
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
+}
 
-  .poses {
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
+.poses {
+  display: flex;
+  flex-direction: row;
+}
+
+.remove-ul-btn {
+  font-weight: bold;
+  color: gray;
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  cursor: pointer;
+}
+
+.remove-ul-btn:hover {
+  color: black;
+  text-shadow: 2px 2px 4px gray;
+}
