--- a/src/AddPoseFormComponent/AddPoseForm.css
+++ b/src/AddPoseFormComponent/AddPoseForm.css
@@ -1,16 +1,15 @@
-input {
+input[type='text'] {
     padding: 1.5rem;
     border: 1px solid #666;
-    border-radius: 3px
-}
-  
-input[type='text'] {
+    border-radius: 3px;
     flex-grow: 1;
     margin-right: 0.5rem;
 }
 
 .dropdown {
-    background-color: white;
+    background-color: #fcf7f4;
+    position: fixed;
+    z-index: 10;
     display: flex;
     flex-direction: column;
     border: 1px solid gray;
@@ -23,5 +22,10 @@ input[type='text'] {
 .dropdown-item {
     cursor: pointer;
     text-align: start;
-    margin: 2px 0;
+    margin: 2px;
+}
+
+.dropdown-item:hover {
+    background-color: #e6d9d2;
+    margin: 2px 0px;
 }
